test/interop/C/errorMessage/exportingStrings.chpl
export proc takesString(x: string) {
  writeln(x);
}

export proc returnsString(): string {
  return "whee";
}
